--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $almond: #fffff4;
 $text-shadow: 0px 1px 5px; 
 
 // mixin
-@mixin paralax-scrolling {
+@mixin parallax-scrolling {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -13,4 +13,16 @@ $text-shadow: 0px 1px 5px;
 	-moz-background-size: cover;
 	-ms-background-size: cover;	
 	background-size: cover;
+}
+
+@mixin no-parallax {
+	background-attachment: scroll !important;
+	background-position: center center !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    -webkit-background-size: cover;
+	-moz-background-size: cover;
+	-ms-background-size: cover;	
+	background-size: cover;	
 }
